1. Significantly reworked build system for all projects    (module-info.java files are no longer used) 2. Reworked Cucumber support for WebUi project    (now based on JUnit4 + SpringBootTest) 3. Added support for ReportPortal for WebApi and WebUi projects